force-app/main/default/objects/Career_Break__c/Career_Break__c.object-meta.xml
<CustomObject>
    <label>Career Break</label>
    <nameField>
        <displayFormat>CB-{00000}</displayFormat>
        <label>Career Break Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Career Breaks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>