force-app/main/default/objects/Career_Break__c/fields/Gap__c.field-meta.xml
<CustomField>
    <fullName>Gap__c</fullName>
    <formula>TEXT(
  FLOOR(
    ( ( YEAR( End_Date__c ) - YEAR( Start_Date__c ) ) * 12 + 
      MONTH( End_Date__c ) - MONTH( Start_Date__c ) - 
      IF( DAY( End_Date__c ) &lt; DAY( Start_Date__c ), 1, 0 ) 
    ) / 12
  )
) &amp; &quot; Years &quot; &amp; 
TEXT(
  MOD(
    ( YEAR( End_Date__c ) - YEAR( Start_Date__c ) ) * 12 + 
    MONTH( End_Date__c ) - MONTH( Start_Date__c ) - 
    IF( DAY( End_Date__c ) &lt; DAY( Start_Date__c ), 1, 0 ),
    12
  )
) &amp; &quot; Months&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gap</label>
    <type>Text</type>
</CustomField>