force-app/main/default/objects/Career_Break__c/validationRules/End_Date_Must_Be_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Must_Be_After_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;= Start_Date__c</errorConditionFormula>
    <errorMessage>The End Date must be later than the Start Date.</errorMessage>
</ValidationRule>